@@ -1,3 +1,8 @@
+2004-01-26  JP Rosevear <jpr@ximian.com>
+
+	* e-folder-map.c (e_folder_map_dir): use g_file_test instead of
+	stat and pass the type e_folder_map_dir when recursing
+
 2004-01-24  JP Rosevear <jpr@ximian.com>
 
 	* e-folder-map.c: turn off debugging
